# osmo

./: .envrc  .gitignore  AGENTS.md  DESIGN.md  GETTING_STARTED.md  LEARNING_AND_SHARING.md  README.md  SECURITY.md  osmo.py  pi-odoo-devkit.py  pi-odoo-devkit.sh  pi-odoo-skill-manager.py  pi_odoo_skill_manager.py  pyproject.toml
bootstrap/: doctor.py  install.py  uninstall.py
commands/: README.md  dev
docs/: cli-contract.md
docs/plans/: SHIFT_HANDOFF.md  cli-contract-matrix.md  cross-tool-release-guard-work-package.md  devkit-kiss-agent-hardening-plan.md  odoo-migration-impact-work-package.md  odoo-upgrade-readiness-work-package.md
scripts/: bootstrap.sh  check-skills-consistency.py  install-git-hooks.sh  smoke-test.sh  test-cli-contracts.sh  web_lookup.py
skills/: README.md  manifest.json
skills/dev-workbench/: SKILL.md
skills/dev-workbench/templates/: 00-state.md  01-evidence.md  02-questions.md  03-plan.md  04-decisions.md  05-handoff.md
skills/odoo-otto/: SKILL.md
skills/odoo-pr-review/: SKILL.md
skills/odoo-translate/: SKILL.md
skills/odoo-ui-check/: SKILL.md
skills/odoo-ui-regression-check/: SKILL.md
skills/semantic-commit-message/: SKILL.md
skills/skill-authoring/: SKILL.md
skills/web-lookup/: SKILL.md
templates/: SKILL.md
